<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.meicam.sdk.NvsLiveWindow
        android:id="@+id/liveWindow"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

<!--
    <com.yanzhi.record.view.RecordProgressView
        android:id="@+id/recordProgress"
        android:layout_width="match_parent"
        android:layout_height="10dp" />-->

    <com.yanzhi.record.view.RecordTimelineView
        android:id="@+id/recordTimelineView"
        android:layout_width="match_parent"
        android:layout_height="10dp" />


    <TextView
        android:id="@+id/record_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@mipmap/icon_count_time_bg"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/linearControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="19dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvSegment"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:background="@mipmap/sticker_bg_segment_selected" />


        <Button
            android:id="@+id/buttonSwitchFacing"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/switch_facing_button_list" />

        <Button
            android:id="@+id/buttonFlash"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/flash_button_list" />

        <TextView
            android:id="@+id/tvSuccess"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="17dp"
            android:gravity="center"
            android:text="完成"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearSegment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/linearControl"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/ibSceneNone"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="15dp" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/scene1" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageButton1"
            android:src="@drawable/scene2" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/beautyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="102dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <Button
            android:id="@+id/buttonOpenBeauty"
            android:layout_width="109dp"
            android:layout_height="34dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button_shape"
            android:text="@string/openBeauty"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:background="@drawable/shape_gray_circle_button"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/reddening"
                android:textColor="@color/white" />

            <SeekBar
                android:id="@+id/seekBarReddening"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:focusable="true"
                android:maxHeight="2dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:progressDrawable="@drawable/seekbar"
                android:thumb="@mipmap/block" />


            <TextView
                android:id="@+id/textReddeningValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/defaultValue"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_gray_circle_button"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/whitening"
                android:textColor="@color/white" />

            <SeekBar
                android:id="@+id/seekBarWhitening"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:focusable="true"
                android:maxHeight="2dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:progressDrawable="@drawable/seekbar"
                android:thumb="@mipmap/block" />


            <TextView
                android:id="@+id/textWhiteningValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/defaultValue"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_gray_circle_button"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/strength"
                android:textColor="@color/white" />

            <SeekBar
                android:id="@+id/seekBarStrength"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:focusable="true"
                android:maxHeight="2dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:progressDrawable="@drawable/seekbar"
                android:thumb="@mipmap/block" />


            <TextView
                android:id="@+id/textStrengthValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/defaultValue"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:visibility="invisible" />


    <RelativeLayout
        android:id="@+id/mainButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/buttonSelectFx"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:background="@drawable/fx_button_list" />

        <Button
            android:id="@+id/buttonRecord"
            android:layout_width="69dp"
            android:layout_height="69dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:background="@drawable/record_button_list"
            android:text="@string/record"
            android:textColor="#fff"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/buttonRecord"
            android:src="@mipmap/icon_recoder_delete"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonSetBeauty"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:background="@drawable/beauty_button_list" />

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/compilePage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#b2000000"
        android:visibility="gone">
        <com.yanzhi.record.edit.CompileVideo
            android:id="@+id/compileLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.yanzhi.record.edit.CompileVideo>
    </LinearLayout>

</RelativeLayout>